@@ -1,3 +1,8 @@
+2011-12-30 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFBitVector.c: Added implementation to most functinos.
+	* Source/CFUUID.c: Fixed sscanf usage bug.
+
 2011-12-28 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/GSPrivate.h: Added GSHashBytes().
